<?xml version="1.0"?>
<package format="2">
  <name>inu_can</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="naurril@gmail.com">lie</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
